--- a/src/App.css
+++ b/src/App.css
@@ -18,8 +18,7 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -28,11 +27,21 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Bouton
+{
+    width: 200px;
+    height: 100px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
+    border-radius: 50px;
+}
+
+.Rectangle
+{
+    width: 200px;
+    height: 100px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: black;
 }
